--- a/src/app/components/productos/productos.component.html
+++ b/src/app/components/productos/productos.component.html
@@ -8,7 +8,7 @@
         <label for="descripcion">Descripción</label>
         <input id="descripcion" class="form-control" name="descripcion" #descripcion>
     </div>
-    <button type="button" class="btn btn-success mb-3" (click)="agregarProductoHandle(title.value, descripcion.value)">Agregar</button>
+    <button type="button" class="btn btn-outline-success mb-3" (click)="agregarProductoHandle(title.value, descripcion.value)">Agregar</button>
 </form>
 
 <div class="d-flex flex-wrap justify-content-start">
