--- a/src/app/components/template-producto/template-producto.component.html
+++ b/src/app/components/template-producto/template-producto.component.html
@@ -2,4 +2,4 @@
     <h3>{{ producto.title }}</h3>
     <p>{{ producto.descripcion }}</p>
 </div>
-<button class="btn btn-danger" (click)="sendBorrarProducto(index)">Eliminar</button>
+<button class="btn btn-outline-danger" (click)="sendBorrarProducto(index)">Eliminar</button>
