--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,14 @@
-<div class="jumbotron">
-	<h1>KevinAngular</h1>
-</div>
+<header>
+	<app-navbar></app-navbar>
+</header>
+
+<br>
+
 <div class="container">
 	<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 			
-			<app-productos></app-productos>
+			<router-outlet></router-outlet>
 			
 		</div>
 	</div>
