Add layout flexbox y avances con el front

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,14 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a routerLink="/" class="navbar-brand">KevinAngular10</a>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a routerLink="/productos" class="nav-link">Productos</a>
-            </li>
-            <li class="nav-item">
-                <a routerLink="/favoritos" class="nav-link" >Favoritos</a>
-            </li>
-        </ul>
-    </div>
-</nav>
-
+<p>
+	<mat-toolbar class="kevin-navbar" color="primary">
+		<a class="left" routerLink="/contactos" routerLinkActive="active"><span>Contactos</span></a>
+		<a class="left" routerLink="/favoritos" routerLinkActive="active"><span>Favoritos</span></a>
+		<span class="spacer"></span>
+		<span>KevinAngularMaterial</span>
+	</mat-toolbar>
+</p>
