--- a/src/app/components/contactos/contactos.component.html
+++ b/src/app/components/contactos/contactos.component.html
@@ -5,31 +5,60 @@
         <div fxLayout="row" fxLayoutAlign="center">
             <div class="container-form" fxLayout="column">
                 <h2>Agregar nuevo contacto</h2>
-                <form fxLayout="row" fxLayoutAlign="space-evenly">
+                <form id="form-contacto" #formContacto="ngForm" autocomplete="off" (ngSubmit)="agregarContactoHandle(formContacto)"
+                    fxLayout="column wrap" fxLayout.gt-md="row" fxLayout.gt-sm="row" fxLayout.gt-xs="column" fxLayoutAlign="space-evenly center">
             
                     <mat-form-field appearance="fill" class="example-form-field">
                         <mat-label>Nombre y apellido</mat-label>
-                        <input color="primary" matInput type="text" #title>
+                        <input  id="nombre" 
+                                name="nombre" 
+                                [(ngModel)]="formulario.nombre" 
+                                color="primary" 
+                                matInput 
+                                type="text" 
+                                #nombre="ngModel" 
+                                minlength="11" 
+                                required
+                                >
                         <mat-icon matSuffix>create</mat-icon>
+                        <div *ngIf="nombre.invalid && nombre.dirty">
+                            <mat-hint *ngIf="nombre.errors.required">Campo requerido</mat-hint>
+                            <mat-hint *ngIf="nombre.errors.minlength">Cantidad de caracteres: {{nombre.value.length || 0}}/11</mat-hint>
+                        </div>
+
                     </mat-form-field>
 
                     <mat-form-field appearance="fill" class="example-form-field">
                         <mat-label>Profesión</mat-label>
-                        <input matInput type="text" #profesion>
+                        <input  id="profesion" 
+                                name="profesion" 
+                                [(ngModel)]="formulario.profesion" 
+                                matInput 
+                                type="text" 
+                                #profesion="ngModel" 
+                                required
+                                >
                         <mat-icon matSuffix>create</mat-icon>
+                        <mat-hint *ngIf="profesion.errors.required">Campo requerido</mat-hint>
                     </mat-form-field>
             
                     <mat-form-field appearance="fill">
                         <mat-label>Genero</mat-label>
-                        <mat-select #genero>
+                        <mat-select id="genero" 
+                                    name="genero" 
+                                    [(ngModel)]="formulario.genero" 
+                                    #genero="ngModel" 
+                                    required
+                                    >
                             <mat-option value="" selected>Seleccione</mat-option>
                             <mat-option value="1">Hombre</mat-option>
                             <mat-option value="2">Mujer</mat-option>
                             <mat-option value="3">Otro</mat-option>
                         </mat-select>
+                        <mat-hint *ngIf="genero.errors.required">Campo requerido</mat-hint>
                     </mat-form-field>
             
-                    <button mat-raised-button color="primary" (click)="agregarContactoHandle(title.value, profesion.value, genero.value)">Agregar contacto</button>
+                    <button mat-raised-button color="primary" [disabled]="formContacto.invalid">Agregar contacto</button>
             
                 </form>
             </div>
