--- a/src/app/components/template-contacto/template-contacto.component.html
+++ b/src/app/components/template-contacto/template-contacto.component.html
@@ -15,6 +15,6 @@
         </p>
     </mat-card-content>
     <mat-card-actions>
-        <button color="primary" mat-button (click)="sendBorrarContacto(index)">Borrar</button>
+        <button mat-raised-button color="primary" (click)="sendBorrarContacto(index)">Borrar</button>
     </mat-card-actions>
 </mat-card>
