--- a/src/app/components/contactos/contactos.component.html
+++ b/src/app/components/contactos/contactos.component.html
@@ -10,36 +10,36 @@
             
                     <mat-form-field appearance="fill" class="example-form-field">
                         <mat-label>Nombre y apellido</mat-label>
-                        <input  id="nombre" 
+                        <input  matInput
+                                id="nombre" 
                                 name="nombre" 
-                                [(ngModel)]="formulario.nombre" 
-                                color="primary" 
-                                matInput 
+                                [(ngModel)]="formulario.nombre"                                  
                                 type="text" 
                                 #nombre="ngModel" 
                                 minlength="11" 
                                 required
                                 >
                         <mat-icon matSuffix>create</mat-icon>
-                        <div *ngIf="nombre.invalid && nombre.dirty">
-                            <mat-hint *ngIf="nombre.errors.required">Campo requerido</mat-hint>
-                            <mat-hint *ngIf="nombre.errors.minlength">Cantidad de caracteres: {{nombre.value.length || 0}}/11</mat-hint>
-                        </div>
-
+                        <mat-error *ngIf="nombre.invalid && nombre.dirty">
+                            <mat-hint *ngIf="nombre.hasError('required')">Campo requerido</mat-hint>
+                            <mat-hint *ngIf="nombre.hasError('minlength')">Cantidad de caracteres: {{nombre.value.length || 0}}/11</mat-hint>
+                        </mat-error>
                     </mat-form-field>
 
                     <mat-form-field appearance="fill" class="example-form-field">
                         <mat-label>Profesión</mat-label>
-                        <input  id="profesion" 
+                        <input  matInput
+                                id="profesion" 
                                 name="profesion" 
                                 [(ngModel)]="formulario.profesion" 
-                                matInput 
                                 type="text" 
                                 #profesion="ngModel" 
                                 required
                                 >
                         <mat-icon matSuffix>create</mat-icon>
-                        <mat-hint *ngIf="profesion.errors.required">Campo requerido</mat-hint>
+                        <mat-error *ngIf="profesion.invalid && profesion.dirty">
+                            <mat-hint *ngIf="profesion.hasError('required')">Campo requerido</mat-hint>
+                        </mat-error>
                     </mat-form-field>
             
                     <mat-form-field appearance="fill">
@@ -55,7 +55,9 @@
                             <mat-option value="2">Mujer</mat-option>
                             <mat-option value="3">Otro</mat-option>
                         </mat-select>
-                        <mat-hint *ngIf="genero.errors.required">Campo requerido</mat-hint>
+                        <mat-error *ngIf="profesion.invalid && profesion.dirty">
+                            <mat-hint *ngIf="genero.hasError('required')">Campo requerido</mat-hint>
+                        </mat-error>
                     </mat-form-field>
             
                     <button mat-raised-button color="primary" [disabled]="formContacto.invalid">Agregar contacto</button>
