--- a/src/app/components/template-contacto/template-contacto.component.html
+++ b/src/app/components/template-contacto/template-contacto.component.html
@@ -15,6 +15,7 @@
         </p>
     </mat-card-content>
     <mat-card-actions>
-        <button mat-raised-button color="primary" (click)="sendBorrarContacto(index)">Borrar</button>
+        <button mat-raised-button color="primary" (click)="sendBorrarContacto()">Borrar</button>
+        <button mat-raised-button color="secundary" (click)="agregarFavoritoHandle()">Agregar a favoritos</button>
     </mat-card-actions>
 </mat-card>
