Add badges and template favoritos

--- a/src/app/components/favoritos/favoritos.component.html
+++ b/src/app/components/favoritos/favoritos.component.html
@@ -6,7 +6,7 @@
 
         <div fxFlex="auto" fxLayout="row wrap" fxLayoutAlign="space-evenly stretch">
 
-            <app-template-contacto 
+            <app-template-favorito 
 
                 fxFlex="auto" 
                 fxLayout="row"
@@ -18,7 +18,7 @@
                 [contacto]="contacto" 
                 [index]="i"
                 
-            ></app-template-contacto>
+            ></app-template-favorito>
 
         </div>
 
