--- a/src/app/components/template-favorito/template-favorito.component.html
+++ b/src/app/components/template-favorito/template-favorito.component.html
@@ -15,7 +15,7 @@
         </p>
     </mat-card-content>
     <mat-card-actions>
-        <button mat-raised-button color="primary" (click)="sendBorrarContacto()">Borrar contacto</button>
-        <button mat-raised-button color="secundary" (click)="agregarFavoritoHandle()">Agregar a favoritos</button>
+        <button mat-raised-button color="primary" (click)="sendBorrarFavorito()">Borrar favorito</button>
+        <button mat-raised-button color="secundary">Like</button>
     </mat-card-actions>
 </mat-card>
