--- a/src/app/components/template-favorito/template-favorito.component.html
+++ b/src/app/components/template-favorito/template-favorito.component.html
@@ -10,11 +10,9 @@
     <img *ngIf="contacto.genero == '2'" mat-card-image src="https://www.iconfinder.com/data/icons/business-avatar-1/512/4_avatar-512.png" alt="Foto del contacto">
     <img *ngIf="contacto.genero == '3'" mat-card-image src="https://cdn3.iconfinder.com/data/icons/fantasy-and-role-play-game-adventure-quest/512/Grim_Reaper-512.png" alt="Foto del contacto">
     <mat-card-actions>
-        <!--
         <button mat-raised-button color="primary" (click)="sendBorrarFavorito()">Borrar favorito</button>
-        <button mat-raised-button color="secundary" (click)="sendContactoVoteUp()">Vote Up</button>
-        <button mat-raised-button color="secundary" (click)="sendContactoVoteDown()">Vote Down</button>
-        <span>{{ contacto.votes }}</span>
-        -->
+        <mat-icon class="icon-thumb" (click)="sendContactoVoteUp()" aria-hidden="false" aria-label="Thumb Up">thumb_up</mat-icon>
+        <span>Votos: {{ contacto.votes }}</span>
+        <mat-icon class="icon-thumb" (click)="sendContactoVoteDown()" aria-hidden="false" aria-label="Thumb Down">thumb_down</mat-icon>
     </mat-card-actions>
 </mat-card>
