--- a/src/app/components/template-contacto/template-contacto.component.html
+++ b/src/app/components/template-contacto/template-contacto.component.html
@@ -9,16 +9,9 @@
     <img *ngIf="contacto.genero == '1'" mat-card-image src="https://cdn3.iconfinder.com/data/icons/business-avatar-1/512/7_avatar-512.png" alt="Foto del contacto">
     <img *ngIf="contacto.genero == '2'" mat-card-image src="https://www.iconfinder.com/data/icons/business-avatar-1/512/4_avatar-512.png" alt="Foto del contacto">
     <img *ngIf="contacto.genero == '3'" mat-card-image src="https://cdn3.iconfinder.com/data/icons/fantasy-and-role-play-game-adventure-quest/512/Grim_Reaper-512.png" alt="Foto del contacto">
+    <span>Votos: {{ contacto.votes }}</span>
     <mat-card-actions>
-        <!--
         <button mat-raised-button color="primary" (click)="sendBorrarContacto()">Borrar contacto</button>
-        -->
-        <button mat-raised-button color="primary" (click)="agregarFavoritoHandle()">Agregar a favoritos</button>
-
-        <!--
-        <button mat-raised-button color="secundary" (click)="sendContactoVoteUp()">Vote Up</button>
-        <button mat-raised-button color="secundary" (click)="sendContactoVoteDown()">Vote Down</button>
-        <span>{{ contacto.votes }}</span>
-        -->
+        <button mat-raised-button color="secundary" (click)="agregarFavoritoHandle()">Agregar a favoritos</button>
     </mat-card-actions>
 </mat-card>
