--- a/src/app/components/template-favorito/template-favorito.component.scss
+++ b/src/app/components/template-favorito/template-favorito.component.scss
@@ -2,3 +2,12 @@
     cursor: pointer;
     margin: 0 5px;
 }
+.mat-card-image {
+    margin-bottom: 0;
+    transform: scale(0.9);
+    transition: 0.5s;
+}
+.mat-card-image:hover {
+    transform: scale(0.92);
+    transition: 0.5s;
+}
