--- a/src/app/components/template-favorito/template-favorito.component.html
+++ b/src/app/components/template-favorito/template-favorito.component.html
@@ -1,7 +1,7 @@
 <mat-card>
     <mat-card-header>
         <div mat-card-avatar>
-            <img color="white" src="https://cdn0.iconfinder.com/data/icons/elasto-online-store/26/00-ELASTOFONT-STORE-READY_user-circle-32.png">
+            <mat-icon aria-hidden="false" aria-label="Icon people">perm_identity</mat-icon>
         </div>
         <mat-card-title>{{ contacto.nombre }}</mat-card-title>
         <mat-card-subtitle>{{ contacto.profesion }}</mat-card-subtitle>
