--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,9 @@ body {
     background: #303030;
     color: aliceblue;
 }
+
+.mat-raised-button.mat-primary:hover {
+    outline: 1px solid #c2185b;
+    color: #c2185b;
+    background-color: #424242;
+}
