--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,6 +6,7 @@
 				Favoritos
 			</span>
 		</a>
+		<a *ngIf="loginAuthService.statusAuth()" class="left btn-logout" routerLink="/login" routerLinkActive="active" (click)="logOut()"><span>Logout</span></a>
 		<span class="spacer"></span>
 		<span>KevinAngularMaterial</span>
 	</mat-toolbar>
