--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -10,3 +10,8 @@
 .active {
     background-color:#AD1457;
 }
+.btn-logout {
+    background-color: #607d8b;
+    font-weight: bold;
+    margin-left: 15px;
+}
