Angular Google Maps

--- a/src/app/components/template-contacto/template-contacto.component.html
+++ b/src/app/components/template-contacto/template-contacto.component.html
@@ -9,8 +9,11 @@
     <img mat-card-image [src]="contacto.imagen" alt="Foto de {{ contacto.nombre }}">
     <mat-icon class="icon_thumbs" aria-hidden="false" aria-label="Icon thumbs">thumbs_up_down</mat-icon>
     <span>{{ contacto.votes }}</span>
-    <mat-card-actions>
-        <button mat-raised-button color="primary" (click)="sendBorrarContacto()">Borrar contacto</button>
-        <button mat-raised-button color="secundary" (click)="agregarFavoritoHandle()">Agregar a favoritos</button>
+    <mat-card-actions fxLayoutAlign="space-between">
+        <button mat-raised-button color="primary" (click)="sendBorrarContacto()">Borrar</button>
+        <button mat-raised-button color="warn" (click)="agregarFavoritoHandle()">
+            <mat-icon class="icon_thumbs" aria-hidden="false" aria-label="Icon thumbs">grade</mat-icon>
+        </button>
+        <a routerLink="/contacto/{{ contacto.id }}" mat-raised-button color="accent">Ver</a>
     </mat-card-actions>
 </mat-card>
