--- a/src/app/components/google-maps/google-maps.component.html
+++ b/src/app/components/google-maps/google-maps.component.html
@@ -6,20 +6,24 @@
                 <div mat-card-avatar>
                     <mat-icon aria-hidden="false" aria-label="Icon people">perm_identity</mat-icon>
                 </div>
-                <mat-card-title>{{ contacto.nombre }}</mat-card-title>
-                <mat-card-subtitle>{{ contacto.profesion }}</mat-card-subtitle>
+                <mat-card-title>{{ (contacto | async)?.nombre }}</mat-card-title>
+                <mat-card-subtitle>{{ (contacto | async)?.profesion }}</mat-card-subtitle>
             </mat-card-header>
-            <img mat-card-image [src]="contacto.imagen" alt="Foto de {{ contacto.nombre }}">
+            <img mat-card-image [src]="(contacto | async)?.imagen" alt="Foto de {{ (contacto | async)?.nombre }}">
             <mat-card-actions>
                 <a routerLink="/contactos" mat-raised-button color="warn">Volver a contactos</a>
             </mat-card-actions>
+            <p><strong>Latitud: </strong>{{ (contacto | async)?.latitud }}</p>
+            <p><strong>Longitud: </strong>{{ (contacto | async)?.longitud }}</p>
         </mat-card>
     </div>
 
+    
     <div fxFlex.gt-md="50" fxFlex.gt-sm="90" fxFlex.gt-xs="90">
-        <agm-map fxFlex.gt-md="90" fxFlex.gt-sm="90" fxFlex.gt-xs="90" [latitude]="lat" [longitude]="long">
-            <!--<agm-marker [latitude]="contacto.latitud" [longitude]="contacto.longitud"></agm-marker>-->
+        <agm-map *ngIf="(contacto | async)?.latitud" fxFlex.gt-md="90" fxFlex.gt-sm="90" fxFlex.gt-xs="90" 
+            [zoom]="4" [latitude]="(contacto | async)?.latitud" [longitude]="(contacto | async)?.longitud">
+            <agm-marker [latitude]="(contacto | async)?.latitud" [longitude]="(contacto | async)?.longitud"></agm-marker>
         </agm-map>
     </div>
-
+    
 </div>
