--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,10 +8,6 @@ body {
     color: aliceblue;
 }
 
-/*
-.mat-raised-button.mat-primary:hover {
-    outline: 1px solid #c2185b;
-    color: #c2185b;
-    background-color: #424242;
+.mat-card {
+    width: 100%;
 }
-*/
