PROTRACTOR: Automatizacion del form de Contacto

--- a/src/app/components/contactos/contactos.component.html
+++ b/src/app/components/contactos/contactos.component.html
@@ -42,7 +42,7 @@
                         </mat-error>
                     </mat-form-field>
 
-                    <button mat-raised-button color="primary" [disabled]="formContacto.invalid">Agregar contacto</button>
+                    <button id="btn-new-contacto" mat-raised-button color="primary" [disabled]="formContacto.invalid">Agregar contacto</button>
             
                 </form>
             </div>
