--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
         <mat-card class="card-login">
             <h1>¿Ingresar al sistema de contacto KevinAngular?</h1>
             <div fxLayoutAlign="center center">
-                <button class="btn-login" mat-raised-button color="primary" (click)="logIn()">Entrar al sistema</button>
+                <button id="btn-login" class="btn-login" mat-raised-button color="primary" (click)="logIn()">Entrar al sistema</button>
             </div>
         </mat-card>
 
