--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,6 +8,6 @@
 		</a>
 		<a *ngIf="loginAuthService.statusAuth()" class="left btn-logout" routerLink="/login" routerLinkActive="active" (click)="logOut()"><span>Logout</span></a>
 		<span class="spacer"></span>
-		<span>KevinAngularMaterial</span>
+		<span>KevinAngular</span>
 	</mat-toolbar>
 </p>
